# sudoku

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
example_scripts/: dim_the_lights.lua  find_easy_boards.lua  timer.lua
src/: config.rs  draw_helper.rs  input_helper.rs  main.rs  status_bar.rs  sudoku_game.rs  sudoku_solver.rs  task_status.rs
src/status_bar/: add.rs  background_image.rs  board_gen.rs  colour_overwrite.rs  cpu_solve.rs  cpu_solver.rs  dummy.rs  eval.rs  find.rs  font.rs  fps.rs  hard_reset.rs  mod.rs  on_board_init.rs  padding.rs  pencil_marks.rs
src/status_bar/shorthands/: list.rs  mod.rs
