[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
arboard = "3.3.0"
bit-vec = "0.6.3"
directories = "5.0.1"
lazy_static = "1.4.0"
macroquad = "0.4.4"
mlua = { version = "0.9.6", features = ["luau"] }
ndarray = "0.15.6"
num_cpus = "1.16.0"
opener = "0.6.1"
rand = "0.8.5"
regex-lite = "0.1.5"
threadpool = "1.8.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
